--- a/index1.htm
+++ b/index1.htm
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>abdalmalekrabee</title>
+    <link rel="stylesheet" href="css/styl.css">
 </head>
 <body>
-    <div align="right">
+    <div class="box" align="right">
         <h3 >Dr.Eleanor Gaye</h3>
     <p>awesome Scienc Facutly<br>Universty of awesome<br>
         Bobtown CA 99999<br>
@@ -17,10 +18,12 @@
     </div>
     
     </p>
+    <section class="box">
     <h3>Miss Eileen Dover </h3>
     <p> 4321 Cliff Top Edge</p>
     <p>Dover, CT9 XXX</p>
     <p>UK</p>
+    </section>
     <h1>Re: Eileen Dover university application</h1>
     <h4>Dear Eileen,</h4>
     <p>Thank you for your recent application to join us at the University of Awesome's science faculty to study as part
